--- a/core/templates/core/networkscan.html
+++ b/core/templates/core/networkscan.html
@@ -11,46 +11,46 @@
         
         <div class="card mb-4">
             <div class="card-body">
-                <form>
+                <form method="POST" action=".">
+                    {% csrf_token %}
                     <div class="row m-3">
                       <div class="col">
                         <label class="my-1 mr-2" for="scan_name">Scan Name</label>
-                        <input type="text" id="scan_name" class="form-control" placeholder="EX : Company1">
+                        <input type="text" id="scan_name" name="scan_name" class="form-control" placeholder="EX : Company1">
                       </div>
                       <div class="col">
-                        <label class="my-1 mr-2" for="scan_name">IP address or Network subnet</label>
-                        <input type="text" class="form-control" placeholder="EX : 192.168.1.1 or 192.168.1.0/24">
+                        <label class="my-1 mr-2" for="ip_addr">IP address or Network subnet</label>
+                        <input type="text" name="ip_addr" id="ip_addr" class="form-control" placeholder="EX : 192.168.1.1 or 192.168.1.0/24">
                       </div>
                     </div>
                     <div class="row m-3">
                         <div class="col">
-                        <label class="my-1 mr-2" for="share">Scan Type</label>
-                        <select class="form-select" id="share" aria-label="Default select example">
-                            <option selected>Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                        <label class="my-1 mr-2" for="share">Port scan Type</label>
+                        <select class="form-select" name="portscantype" id="share" aria-label="Default select example"> 
+                            <option value="1">TCP connect scan</option>
+                            <option value="2">Stealthy scan</option>
+                            
                           </select>
                         </div>
 
                         <div class="col">
                             <label class="my-1 mr-2" for="share">Port range</label>
-                            <select class="form-select" id="share" aria-label="Default select example">
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                            <select class="form-select" name ="portrangetype" id="share" aria-label="Default select example">
+                                <option value="0">Top 10</option>
+                                <option value="1">Top 100</option>
+                                <option value="2" selected>top 1000</option>
+                                <option value="3">All ports (1 - 65535)</option>
                               </select>
                         </div>
                     </div>
                     <div class="row m-3">
                         <div class="col">
                             <label class="my-1 mr-2" for="share">Intrustivity</label>
-                            <select class="form-select" id="share" aria-label="Default select example">
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                            <select class="form-select" name="intrusive_type" id="share" aria-label="Default select example">
+                                
+                                <option value="1">Low (slow scan)</option>
+                                <option value="2" selected>Meduim (Normal)</option>
+                                <option value="3">High (fast)</option>
                               </select>
                         </div>
                         <div class="col">
